<resources>
    <string name="app_name">الباشا مندوب</string>
    <string name="app_name2">مؤسسـة حسـين حـــامد الحـربى للحـلويـات</string>

    <string name="vat">الرقم الضريبى 310213123900003 </string>
    <string name="commerical"> س.ت رقم  4031215347</string>
    <string name="commerical2">مكة المكرمة حى الزايدى</string>
    <string name="numberInvoice">فاتورة ضريبية رقم \t </string>
    <string name="creditInvoice">سند قبض </string>

    <string name="totalMoney">اجمالى المبلغ شامل الضريبة</string>
    <string name="finalMoney">الاجمالى  شامل الضريبة</string>

    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل دخول</string>
    <string name="logout">تسجيل خروج</string>

    <string name="home">الرئيسية  </string>
    <string name="pocket">المصاريف</string>
    <string name="credit">الفواتير المستحقة</string>
    <string name="all_invoices">كل الفواتير  </string>
    <string name="profile">الصفحة الشخصية</string>

    <string name="call">اتصال</string>
    <string name="map">فتح الخريطة</string>

    <string name="search">بحث</string>
    <string name="empty_text_list">لا يوجد عناصر منشئة بعد </string>

    <string name="sa">السبت</string>


    <string name="clientName">اسم العميل</string>
    <string name="clientName2">محمود نصار</string>
    <string name="Phone">رقم الهاتف  </string>
    <string name="clientPhone1">رقم الهاتف 1</string>
    <string name="clientPhone2">رقم الهاتف 2</string>
    <string name="clientResponsible">اسم المسئول</string>
    <string name="clientDays">أيام الزيارة</string>
    <string name="proceed">استمرار</string>
    <string name="update">تعديل المنتجات</string>
    <string name="updateClient">تعديل </string>
    <string name="add">اضافة</string>
    <string name="addClient">اضافة عميل</string>
    <string name="updateClient2">تعديل عميل</string>
    <string name="addPocket">اضافة مصروف</string>
    <string name="addInvoice">اضافة فاتورة</string>
    <string name="addInvoice2"> تحصيل اجل</string>
    <string name="addSignature">اضافة توقيع</string>
    <string name="deleteInvoice">الغاء فاتورة</string>
    <string name="invoiceNumber">رقم الفاتورة</string>
    <string name="invoiceDetail">تفاصيل الفاتورة</string>
    <string name="invoiceDetail2">سند تحصيل اجل</string>

    <string name="choose_date">تحديد التاريخ</string>
    <string name="money">القيمة</string>
    <string name="notes">ملاحظات</string>
    <string name="upload_charge"> ارفق الايصال </string>

    <string name="dateafternow">من فضلك اختر تاريخ بعد تاريخ البداية</string>
    <string name="dateBeforenow">من فضلك اختر تاريخ قبل تاريخ النهاية</string>
    <string name="dateFrom">من فضلك اختر تاريخ البداية أولا</string>

    <string name="connection_failed">لا يوجد اتصال بالانترنت</string>
    <string name="empty_name_error"> حقل الاسم فارغ</string>
    <string name="empty_password_error"> حقل كلمة المرور  فارغ</string>
    <string name="length_password_error">يجب الا يقل طول كلمة المرور عن 6 خانات</string>


    <string name="empty_client_error"> حقل اسم العميل  فارغ</string>
    <string name="empty_phone1_error"> حقل رقم الهاتف 1  فارغ</string>
    <string name="empty_phone2_error"> حقل رقم الهاتف 2  فارغ</string>
    <string name="empty_delegate_error"> حقل اسم المندوب  فارغ</string>
    <string name="empty_days_error"> يجب اختيار يوم واحد للزيارة على الأقل</string>

    <string name="empty_money_error"> حقل القيمة  فارغ</string>
    <string name="empty_date_error"> حقل التاريخ  فارغ</string>
    <string name="empty_notes_error"> حقل الملاحظات  فارغ</string>


    <string name="action_delete">مسح</string>

    <string name="productName">اسم المنتج</string>
    <string name="Price">السعر </string>
    <string name="count">الكمية </string>

    <string name="pay">طريقة الدفع </string>
    <string name="payCash"> كاش </string>
    <string name="pay2"> اجل</string>

    <string name="total">الاجمالى</string>
    <string name="totalDiscount"> الاجمالى بعد الخصم</string>
    <string name="tax">الضريبة</string>
    <string name="discount">الخصم</string>
    <string name="paid">المبلغ المدفوع</string>
    <string name="paid2">المبلغ المحصل</string>
    <string name="unPaid">المبلغ المستحق</string>
    <string name="unPaid2">المبلغ المتبقى</string>

    <string name="print">طباعة</string>

    <string name="unit2">علبة</string>
    <string name="box2">ك</string>

    <string name="empty_location_error"> احداثيات الموقع غير موجودة </string>
    <string name="paired_devices">الاجهزة المتصلة</string>
    <string name="other_devices">اجهزة اخرى</string>
    <string name="scan">بحث</string>  
    <string name="devicelist_action_button_text_scan">بحث</string>
    <string name="devicelist_action_button_text_cancel">توقف</string>

    <string name="none_found">غير موجود</string>
    <string name="none_paired">غير متصل</string>
    <string name="connect">اتصل</string>
    <string name="connected">متصل</string>
    <string name="change_printer">تغير الطابعة</string>
    <string name="date">التاريخ</string>
    <string name="stockDate">تقرير المخزن بتاريخ   </string>

    <string name="delegateName2">اسم المندوب البائع </string>
    <string name="address">العنوان</string>


    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <!--   <string name="permission_rationale">يجب عليك تفعيل الموقع الخاص بك</string>
       <string name="permission_denied_explanation">تم رفض الإذن ، ولكن هناك حاجة أساسية للموقع حتى تتمكن من اضافة عميل</string>
       <string name="settings">الضبط</string>

   -->
    <string name="uploaded">جارى التحميل ..</string>
    <string name="upload_success"> تم الرفع بنجاح</string>
    <string name="userName">اسم المستخدم</string>

    <string name="no">لا</string>
    <string name="yes">نعم</string>

    <string name="logoutAlert">هل انت متأكد من تسجيل الخروج ؟؟</string>

    <string name="productError">لم يتم اضافة اى منتج</string>

    <string name="stocky">م : </string>
    <string name="send">ارسال</string>

    <string name="invoices">فواتير </string>
    <string name="report1">عرض ختام اليوم</string>
    <string name="report2">عرض المخزن الحالى</string>

    <string name="stock1">ك المستلمة</string>
    <string name="stock2">ك المباعة</string>
    <string name="stock3">المتبقى</string>
    <string name="stock4">الاسم بالعربية</string>
    <string name="stock5">الاسم بالانجليزية</string>

    <string name="from">من</string>
    <string name="to">الى</string>

    <!--    <string name="InvoicesQty">عدد فواتير اليوم</string>-->
    <!--    <string name="InvoicesAmount">إجمالي قيم فواتير</string>-->
    <!--    <string name="InvoicesCashedAmount">إجمالي المحصل من فواتير اليوم</string>-->
    <!--    <string name="InvoicesCreditAmount">إجمالي مديونيه فواتير اليوم</string>-->
    <!--    <string name="CreditAmount">إجمالي المحصل من مديونات سابقه</string>-->
    <!--    <string name="TotalCollectedAmount">إجمالي المحصل يوم فواتير وتحصيل مجيونات سابقه</string>-->


    <string name="InvoicesQty">ع ف</string>
    <string name="InvoicesAmount"> ج المبيعات</string>
    <string name="InvoicesCashedAmount"> م.كاش </string>
    <string name="InvoicesCreditAmount"> م.اجل </string>
    <string name="TotalCollectedAmount">الاجمالى</string>
    <string name="getCredit">لقد تم تحصيل المديونية بنجاح</string>
    <string name="getSignature">لقد تم اضافة التوقيع بنجاح</string>
    <string name="creditvalue">يجب الا تزيد القيمة عن المديونية</string>
    <string name="noStock">لا يوجد مخزون</string>

    <string name="CreditAmount2">ت الاجل</string>


    <string name="permission_rationale">إذن الموقع مطلوب لوظيفة التطبيق الأساسية</string>
    <string name="permission_denied_explanation">تم رفض الإذن ، ولكنه ضروري لتشغيل وظائف التطبيق.</string>
    <string name="settings">الضبط</string>
    <string name="ok">OK</string>


    <string name="action_type">نوع الحركة</string>
    <string name="previousBalance">ر. السابق</string>
    <string name="currentBalance">ر. الحالي</string>
    <string name="money2">المبلغ  </string>
    <string name="invoiceAlert">هل انت متأكد من الغاء الفاتورة</string>
    <string name="employeeName">اسم المندوب</string>
    <string name="index">م</string>
    <string name="total1">ج</string>
    <string name="paid01">ج.م</string>
    <string name="unPaid0">  المتبقى</string>
    <string name="invoiceNumber2">ر.ف</string>
    <string name="count2">ك </string>
    <string name="unitPrice3"> س.ع    </string>
    <string name="officialPrice2">س . ب   </string>
    <string name="balancePrice2"> ف . س    </string>
    <string name="empty_product_error"> يجب اختيار منتج واحد على الأقل</string>


    <string name="report5"> المنتجات المباعة  </string>
    <!--    <string name="report6">تقرير الفواتير الكاش لعميل عنده مديونيه </string>-->
    <string name="report6"> الفواتير الكاش  </string>
    <string name="report7"> تحصيل الفواتير الاجله </string>
    <string name="report8"> الفواتير الغير مسدده </string>
    <string name="report10"> عهده المندوب</string>
    <string name="report9"> كشف حساب المندوب</string>
    <string name="notification"> الاشعارات</string>
    <string name="_99">99</string>
    <string name="save">حفظ</string>
    <string name="paperHeight">طول الورقة</string>
    <string name="time">وقت الفاتورة</string>
    <string name="printer_not_connected">الطابعة غير متصلة</string>

</resources>