<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linear_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textInvoiceClient"
                style="@style/textStyleRegular"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/clientName"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />


            <LinearLayout
                style="@style/linearInvoice"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:id="@+id/textInvoiceNumber"
                    style="@style/textStyleHeader"
                    android:text="@string/invoiceNumber"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/textInvoiceDate"
                    style="@style/textStyleHeader"
                    android:layout_weight=".8"
                    android:text="@string/date"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

            <LinearLayout
                style="@style/linearInvoice"
                android:layout_marginTop="@dimen/_4sdp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textInvoiceTotal"
                    style="@style/textStyleHeader"
                    android:text="@string/total"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/textInvoiceDiscount"
                    style="@style/textStyleHeader"
                    android:layout_weight=".8"
                    android:text="@string/discount"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

            <LinearLayout
                style="@style/linearInvoice"
                android:layout_marginTop="@dimen/_4sdp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textTotalAfterDiscount"
                    style="@style/textStyleHeader"
                    android:text="@string/totalDiscount"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/textTax"
                    style="@style/textStyleHeader"
                    android:layout_weight=".8"
                    android:text="@string/tax"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>


            <LinearLayout
                style="@style/linearInvoice"
                android:layout_marginTop="@dimen/_4sdp">

                <TextView
                    android:id="@+id/textPaid"
                    style="@style/textStyleHeader"
                    android:text="@string/paid"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/textInvoiceRemain"
                    style="@style/textStyleHeader"
                    android:layout_weight=".8"
                    android:text="@string/unPaid"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>


            <TextView
                android:id="@+id/textFinalTotal"
                style="@style/textStyleRegular"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/finalMoney"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/textInvoiceNotes"
                style="@style/textStyleRegular"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/notes"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linearActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/textAddInvoice"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/addInvoice2"

                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/textAddSignature"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/addSignature"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textDeleteInvoice"
                style="@style/buttonStyle"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@color/color_delete"
                android:text="@string/deleteInvoice"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        android:background="@color/colorView" />

</RelativeLayout>