<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/paper"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:scaleType="centerInside"
        android:src="@drawable/img_basha"
        app:tint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/title"
        style="@style/textStylePrint"
        android:text="@string/app_name2"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"/>

    <TextView
        android:id="@+id/trade_number"
        style="@style/textStylePrint"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/commerical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        style="@style/textStylePrint"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/commerical2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/tax_number"
        style="@style/textStylePrint"
        android:text="@string/vat"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trade_number"/>

    <TextView
        android:id="@+id/textInvoiceNumberLabel"
        style="@style/textStylePrint"
        android:text="@string/numberInvoice"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax_number"/>

    <TextView
        android:id="@+id/textInvoiceNumber"
        style="@style/textStylePrint"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintStart_toEndOf="@+id/textInvoiceNumberLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInvoiceNumberLabel"/>

    <TextView
        android:id="@+id/textType"
        style="@style/textStylePrint"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/payCash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInvoiceNumber"/>

    <TextView
        android:id="@+id/dateLabel"
        style="@style/textStylePrint"
        android:text="@string/date"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInvoiceNumberLabel"/>

    <TextView
        android:id="@+id/textDate"
        style="@style/textStylePrint"
        android:text="27-12-2020"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateLabel"/>

    <TextView
        android:id="@+id/textTime"
        style="@style/textStylePrint"
        app:layout_constraintBaseline_toBaselineOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/textStylePrint"
        android:text="@string/time"
        android:layout_marginEnd="@dimen/_4sdp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textTime"
        app:layout_constraintEnd_toEndOf="@+id/textTime"/>

    <TextView
        android:id="@+id/textClientName"
        style="@style/textStylePrint"
        android:text="@string/clientName2"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime"/>

    <TextView
        style="@style/textStylePrint"
        android:text="@string/clientName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textClientName"
        app:layout_constraintEnd_toStartOf="@+id/textClientName"/>

    <View
        android:layout_width="0dp"
        android:layout_height="3px"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/textColorBlack"
        app:layout_constraintTop_toBottomOf="@+id/textClientName"/>


</androidx.constraintlayout.widget.ConstraintLayout>