<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main_activity_container"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical">

    <include layout="@layout/toolbar_activity" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:orientation="vertical">

            <LinearLayout style="@style/linearEditStyleMain">

                <ImageView
                    style="@style/iconStyleMain"
                    android:src="@drawable/ic_person" />

                <EditText
                    android:id="@+id/editClientName"
                    style="@style/editStyleMain"
                    android:hint="@string/clientName"

                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout style="@style/linearEditStyleMain">

                <ImageView
                    style="@style/iconStyleMain"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/editClientPhone1"
                    style="@style/editStyleMain"
                    android:hint="@string/clientPhone1"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout style="@style/linearEditStyleMain">

                <ImageView
                    style="@style/iconStyleMain"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/editClientPhone2"
                    style="@style/editStyleMain"
                    android:hint="@string/clientPhone2"

                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout style="@style/linearEditStyleMain">

                <ImageView
                    style="@style/iconStyleMain"
                    android:src="@drawable/ic_person" />

                <EditText
                    android:id="@+id/editClientResponsible"
                    style="@style/editStyleMain"
                    android:hint="@string/clientResponsible"

                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                style="@style/textStyleRegular"

                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/clientDays" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                  />


            <TextView
                android:id="@+id/textAdd"
                style="@style/buttonStyle"
                android:layout_margin="@dimen/_30sdp"
                android:text="@string/add" />


            <LinearLayout
                android:id="@+id/linearAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="@dimen/_14sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textUpdate"
                    style="@style/buttonStyle"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@color/color_mark"
                    android:text="@string/updateClient" />

                <TextView
                    android:id="@+id/textDelete"
                    style="@style/buttonStyle"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"

                    android:background="@color/color_delete"
                    android:text="@string/action_delete" />

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>